k8s/overlays/staging/ingress.yaml
# ─── Ingress ──────────────────────────────────────────────────────────────────
# Требует установленного nginx ingress controller:
#   kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhooks-staging
  namespace: webhooks
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Webhooks Staging — Authorization Required"
spec:
  ingressClassName: nginx
  rules:
    # Замени на реальный домен или IP стенда
    - host: staging.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-receiver
                port:
                  number: 8080

    - host: subscriptions.staging.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscriptions-api
                port:
                  number: 8082

    - host: kafka-ui.staging.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080

    - host: prometheus.staging.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

    - host: grafana.staging.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

    - host: delivery-dashboard.dws.sidey383.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery-dashboard
                port:
                  number: 9096
